[gd_scene load_steps=41 format=3 uid="uid://dyhksg8gcuvue"]

[ext_resource type="Script" uid="uid://dg3rvs7ma6i8u" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://6yvhbpobolsf" path="res://icon.svg" id="2_i3pqv"]
[ext_resource type="Texture2D" uid="uid://qpodagk0tvpc" path="res://torpedo_01.png" id="3_urp6f"]
[ext_resource type="Texture2D" uid="uid://cmemu6i30s5kn" path="res://torpedo_02.png" id="4_bwjto"]
[ext_resource type="Texture2D" uid="uid://djcxdibhowcl3" path="res://torpedo_03.png" id="5_606se"]
[ext_resource type="Texture2D" uid="uid://d353qgxloxdym" path="res://torpedo_04.png" id="6_u1c27"]
[ext_resource type="Texture2D" uid="uid://buc0jf6aq0pdu" path="res://torpedo_05.png" id="7_op7ga"]
[ext_resource type="Texture2D" uid="uid://bsamwy1levn51" path="res://torpedo_06.png" id="8_q13i1"]
[ext_resource type="Texture2D" uid="uid://dujkat116lgce" path="res://torpedo_07.png" id="9_pylmc"]
[ext_resource type="Texture2D" uid="uid://dhjnsk7q2a358" path="res://torpedo_08.png" id="10_pbfsw"]
[ext_resource type="Texture2D" uid="uid://ckiem6flm38ju" path="res://torpedo_09.png" id="11_5tmop"]
[ext_resource type="Texture2D" uid="uid://dyu5s5iv7sqiu" path="res://torpedo_10.png" id="12_7ahtn"]
[ext_resource type="Texture2D" uid="uid://cvcsl2jawcupr" path="res://torpedo_11.png" id="13_7lmhl"]
[ext_resource type="Texture2D" uid="uid://bmfputd3huaem" path="res://flame_01.png" id="14_u1c27"]
[ext_resource type="Texture2D" uid="uid://7kgmenpjgun4" path="res://flame_02.png" id="15_op7ga"]
[ext_resource type="Texture2D" uid="uid://d1ovq1tjkrrlg" path="res://flame_03.png" id="16_q13i1"]
[ext_resource type="AudioStream" uid="uid://hps3ex4pman7" path="res://Explosion1.wav" id="17_op7ga"]
[ext_resource type="AudioStream" uid="uid://lmspjhyb8wmu" path="res://Jump2.wav" id="18_q13i1"]
[ext_resource type="Texture2D" uid="uid://dr7hcmkp8q0xy" path="res://dust1.png" id="19_7ahtn"]
[ext_resource type="Texture2D" uid="uid://i24o2v05unkh" path="res://dust2.png" id="20_7lmhl"]
[ext_resource type="Texture2D" uid="uid://c8ju1s1hkyn3q" path="res://dust3.png" id="21_dx0e4"]
[ext_resource type="Texture2D" uid="uid://c2pcu7it6wrbq" path="res://dust4.png" id="22_jm5j8"]
[ext_resource type="AudioStream" uid="uid://bew88to1s3g0m" path="res://Hit1.wav" id="23_7lmhl"]
[ext_resource type="Texture2D" uid="uid://w4ob3wepwrmq" path="res://100-percent-shield-effect-colored.png" id="24_tkwlq"]
[ext_resource type="Texture2D" uid="uid://dhftefc2pjpwy" path="res://90-percent-shield-effect-colored.png" id="25_hl5qd"]
[ext_resource type="Texture2D" uid="uid://dfqyqm5unyx4a" path="res://80-percent-shield-effect-colored.png" id="26_ek41f"]
[ext_resource type="Texture2D" uid="uid://cx2uaw2k034db" path="res://70-percent-shield-effect-colored.png" id="27_khis8"]
[ext_resource type="Texture2D" uid="uid://bbm7h8dr62xw5" path="res://60-percent-shield-effect-colored.png" id="28_b88wv"]
[ext_resource type="Texture2D" uid="uid://begyhum3qlchv" path="res://50-percent-shield-effect-colored.png" id="29_pgbbb"]
[ext_resource type="Texture2D" uid="uid://d3fx7mkddalok" path="res://40-percent-shield-effect-colored.png" id="30_331ug"]
[ext_resource type="Texture2D" uid="uid://cumolk60firgn" path="res://30-percent-shield-effect-colored.png" id="31_ny14h"]
[ext_resource type="Texture2D" uid="uid://cnfkubw453g8" path="res://20-percent-shield-effect-colored.png" id="32_ibah8"]
[ext_resource type="Texture2D" uid="uid://cr0qurt7tk5kk" path="res://10-percent-shield-effect-colored.png" id="33_3iwfv"]
[ext_resource type="AudioStream" uid="uid://b5pd5rntpoyys" path="res://Lose1.wav" id="34_qwsg1"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_onrkg"]
friction = 0.5
bounce = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(129, 122)

[sub_resource type="SpriteFrames" id="SpriteFrames_dx0e4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_urp6f")
}, {
"duration": 1.0,
"texture": ExtResource("4_bwjto")
}, {
"duration": 1.0,
"texture": ExtResource("5_606se")
}, {
"duration": 1.0,
"texture": ExtResource("6_u1c27")
}, {
"duration": 1.0,
"texture": ExtResource("7_op7ga")
}, {
"duration": 1.0,
"texture": ExtResource("8_q13i1")
}, {
"duration": 1.0,
"texture": ExtResource("9_pylmc")
}, {
"duration": 1.0,
"texture": ExtResource("10_pbfsw")
}, {
"duration": 1.0,
"texture": ExtResource("11_5tmop")
}, {
"duration": 1.0,
"texture": ExtResource("12_7ahtn")
}, {
"duration": 1.0,
"texture": ExtResource("13_7lmhl")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_pylmc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_u1c27")
}, {
"duration": 1.0,
"texture": ExtResource("15_op7ga")
}, {
"duration": 1.0,
"texture": ExtResource("16_q13i1")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_7hik5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_7ahtn")
}, {
"duration": 1.0,
"texture": ExtResource("20_7lmhl")
}, {
"duration": 1.0,
"texture": ExtResource("21_dx0e4")
}, {
"duration": 1.0,
"texture": ExtResource("22_jm5j8")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1xqrm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_tkwlq")
}, {
"duration": 1.0,
"texture": ExtResource("25_hl5qd")
}, {
"duration": 1.0,
"texture": ExtResource("26_ek41f")
}, {
"duration": 1.0,
"texture": ExtResource("27_khis8")
}, {
"duration": 1.0,
"texture": ExtResource("28_b88wv")
}, {
"duration": 1.0,
"texture": ExtResource("29_pgbbb")
}, {
"duration": 1.0,
"texture": ExtResource("30_331ug")
}, {
"duration": 1.0,
"texture": ExtResource("31_ny14h")
}, {
"duration": 1.0,
"texture": ExtResource("32_ibah8")
}, {
"duration": 1.0,
"texture": ExtResource("33_3iwfv")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="RigidBody2D" groups=["Player"]]
physics_material_override = SubResource("PhysicsMaterial_onrkg")
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_hqtel")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_i3pqv")

[node name="Torpedo" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_dx0e4")
frame_progress = 0.0302551

[node name="Flame" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-363, -3)
sprite_frames = SubResource("SpriteFrames_pylmc")
frame_progress = 0.17778

[node name="BoostSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_op7ga")

[node name="SlingshotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_q13i1")

[node name="Dust" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(-0.499994, 1)
scale = Vector2(12.4375, 7.75)
sprite_frames = SubResource("SpriteFrames_7hik5")
frame = 3
frame_progress = 1.0

[node name="BottomOfPlayer" type="Marker2D" parent="."]
position = Vector2(0, 63)

[node name="LeftOfPlayer" type="Marker2D" parent="."]
position = Vector2(-65, 0)

[node name="RightOfPlayer" type="Marker2D" parent="."]
position = Vector2(65, 0)

[node name="TopOfPlayer" type="Marker2D" parent="."]
position = Vector2(0, -62)

[node name="DirtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_7lmhl")

[node name="ShieldSprite" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_1xqrm")

[node name="PowerDown" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("34_qwsg1")
